--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,6 @@
 /*.patch
 /*.diff
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight*
-.Trash*
+# hidden and/or OS generated files
+.*
 *[Tt]humbs.db
